--- a/frontend/src/App/AppFooter/AppFooter.css
+++ b/frontend/src/App/AppFooter/AppFooter.css
@@ -1,4 +1,4 @@
-.app-footer {
+footer {
     border-top: 1px solid #ccc;
     padding: 15px 20px;
     font-size: 14px;
@@ -6,7 +6,7 @@
     text-align: center;
     color: #666;
 }
-.app-footer a {
+footer a {
     margin: 0 10px;
     color: #2980b9;
     text-decoration: none;
