--- a/frontend/src/App/AppHeader/AppHeader.css
+++ b/frontend/src/App/AppHeader/AppHeader.css
@@ -1,4 +1,4 @@
-.app-header {
+header {
     background-color: #2c3e50;
     color: white;
     padding: 10px 20px;
@@ -6,11 +6,11 @@
     justify-content: space-between;
     align-items: center;
 }
-.app-header .app-header-logo {
+header h1 {
     margin: 0;
     font-size: 20px;
 }
-.app-header .app-header-nav a {
+header nav a {
     color: white;
     text-decoration: none;
     margin-left: 15px;
